	symbolic links to directories and only root of name for everything else.
	Thanks to chelovechishko.

	Added :cds command that navigates to path obtained by substitution in
	current path.  Thanks to j-xella.

	Added one more invocation format of :colorscheme command, which picks the
	first available color scheme that is supported by the terminal.  Thanks to
	Jose Riha (a.k.a. jose1711).

	Resolve symbolic links for mime-type matchers.  Thanks to Vigi.

	Try to preserve symbolic links in current path when starting vifm by
	checking value of $PWD.  Thanks to Vigi.

	Better documentation for TabLine and TabLineSel highlighting groups.
	Thanks to mwgkgk.

	Always preserve tabs on :restart.  Thanks to mwgkgk.

	Clearer documentation/description for :*unmap commands and
	'vicmd'/'vixcmd' options.  Thanks to chelovechishko.

	Fixed `:tabnew ..` not working due to use of uninitialized data.

	Fixed access to uninitialized memory on clearing view after graphical
	preview.

	Fixed possible crashes after certain patterns of using view mode and
	closing tabs.

	Fixed some resources (like output pipe for --choose-files and
	--choose-dir) being inherited by child processes.  Thanks to Vigi.

	Fixed CWD of the process not always matching current view right after
	startup.  Patch by Daniel Mueller.

	Fixed global substitution with patterns beginning with a caret again.

	Fixed cursors not being synchronized in compare view when scrolling one of
	them with Ctrl-U or Ctrl-D.

	Fixed command-line completion with non-latin characters.  Thanks to dikiy.

0.10-beta to 0.10 (2018-11-11)

	Display list of files in removal confirmation dialog.  Thanks to ovk.

	Support embedded terminal in the plugin for newer Vim.

	Return "broken" from filetype({fnum}, 1) for inaccessible link target.
	Thanks to filterfalse.

	Avoid unnecessary reloading file list after pressing "=" to enter local
	filter.

	Fixed crash on pasting elements of paths that contain broken UTF-8