@@ -1998,6 +1998,11 @@ is the same as using ':h argument' in vim.  Use vifm\-<something> to get help
 on vifm (tab completion works).  This form of the command doesn't work when
 \(aqvimhelp\(aq option is off.
 .TP
+.BI "                                         :hideui"
+.TP
+.BI :hideui
+hide interface to show previous commands' output.
+.TP
 .BI "                                         :highlight"
 .TP
 .BI :hi[ghlight]
