@@ -422,6 +422,7 @@ tabprevio
 tabpreviou
 tabprevious
 cds
+hideui
 
 " "hi" should be highlighted as :command and its argument as highlight group
 hi CurrLine
